--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "restserver",
   "version": "1.0.0",
   "engines": {
-     "node": "8.9.4"
+    "node": "10.5.0"
   },
   "description": "",
   "main": "index.js",
@@ -17,8 +17,8 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.6",
     "mongoose-unique-validator": "^2.0.2"
-   }
-
+  }
 }
