--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.3-alpha.1",
     "google-auth-library": "^3.1.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.6",
